QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

0.2.16   2005-05-03  OSS device name selection and Mac OS X breakthrough.

- Do not ever try to start the JACK server if there's one already found
  running, on which case the client-only mode of operation is then activated
  (as kindly suggested by Orm Finnendahl, thanks).
    
- After several Mac OS X user requests, ALSA/MIDI sequencer support is
  now an option, otherwise detected at configure time and conditionally
  compiled in if, and only if, ALSA is found available (which has been
  a primordial assumption on Linux systems:). Ah, and that just makes
  for the blind inclusion of another backend driver option: coreaudio.

- Actual OSS device selection menu now featured on setup dialog; these
  adds to the device selection button menus for the OSS driver settings.

- Delayed geometry setup of windows upon startup was added as an optional
  workaround to subtle problems due to window decoration information not
  being available at window creation time on some window managers (as patch
  proposed by Dirk Jagdmann. Thanks).

- Fixed some minor but rather old bug that was quitting the application
  abruptly, when one switches off the system tray icon while the main
  application widget is hidden.

- Context menus are finally littered with icons.

  
0.2.15a  2005-02-09  Return of the paranoid.

- Regression from 0.2.13, of the not so stupid pseudo-mutex guards on the
  connections management framework, after fixing some crash reports from
  Fernando Pablo Lopez-Lezcano and Dave Phillips (thanks!); it pays to be
  such a paranoid after all :).


0.2.15   2005-02-06  Client/port names aliasing and other minors.

- JACK/ALSA client and port name aliasing (renaming) is now an optional 
  feature for the connections window; all client/port aliases are saved 
  on a per preset basis (as proposed for Lionstracs' Mediastation).
