@@ -5,6 +5,9 @@ ChangeLog
 
 0.2.16   2005-05-03  OSS device name selection and Mac OS X breakthrough.
 
+- Long overdue transport buttons (rewind, backward and forward) finally 
+  landed onto the main control window, at last :).
+
 - Do not ever try to start the JACK server if there's one already found
   running, on which case the client-only mode of operation is then activated
   (as kindly suggested by Orm Finnendahl, thanks).
